--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./out/app.js",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint . --ext ts",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,10 +21,10 @@
   "devDependencies": {
     "@microsoft/microsoft-graph-types": "^2.40.0",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.14.11",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "eslint": "^8.57.0",
+    "@types/node": "^20.14.14",
+    "@typescript-eslint/eslint-plugin": "^8.0.1",
+    "@typescript-eslint/parser": "^8.0.1",
+    "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-prettier": "^5.2.1",
